<resources>
    <!--LIVE LOCATION-->
    <string name="app_name">Salbox Driver App</string>
    <string name="share_live_location">Comenzar a compartir</string>
    <string name="stop_share_live_location">Dejar de compartir</string>
    <string name="starting_live_location">Compartiendo ubicación...</string>
    <string name="permission_required">Permitir acceso a la ubicación en tiempo real.</string>
    <string name="error_title">Lo sentimos</string>
    <string name="error_description">Ocurrió un error inesperado, por favor vuelve a intentarlo.</string>
    <string name="restart">Reiniciar</string>
    <string name="salbox_logo_alt">Salbox Logo</string>
    <!-- PERMISSIONS -->
    <string name="required_location_permission_title">Se require permiso de ubicación</string>
    <string name="required_location_permission_desc">Esta aplicación necesita permiso de ubicación para compartir tu ubicación en vivo. Concédelo en el siguiente cuadro de diálogo.</string>
    <string name="required_location_bglocation_title">Se requiere permiso de ubicación en segundo plano</string>
    <string name="required_location_bglocation_desc">Para continuar compartiendo su ubicación mientras la aplicación está en segundo plano, otorgue el permiso “Permitir todo el tiempo” en el siguiente cuadro de diálogo.</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <!-- SING IN -->
    <string name="google_sign_in_button_text">Iniciar sesión con Google</string>
    <string name="phone_number">Número de teléfono</string>
    <string name="input_phone_number">Por favor introduce un número de teléfono.</string>
    <string name="invalid_phone_number">Número de teléfono inválido.</string>
    <string name="verification_code">Código de Verificación</string>
    <string name="send_verification_code">Enviar código de verificación</string>
    <string name="code_sent">Código de verificación enviado.</string>
    <string name="verify_code">Verificar Código</string>
    <string name="input_verification_code">Por favor introduce el código de verificación.</string>
    <string name="verification_failed">La verificación falló. Vuele a intentarlo.</string>
    <string name="invalid_verification_code">Código de verficación incorrecto.</string>
    <string name="sigin_error">Ocurrió un error al iniciar sesión.</string>
    <string name="google_sigin_error">Ocurrió un error al iniciar sesión.</string>
    <string name="unauthorized">No está autorizado.</string>
    <string name="live_location_text">La ubicación en tiempo real está</string>
    <string name="active">Activa</string>
    <string name="inactive">Inactiva</string>
    <!--WEB CLIENT ID-->
    <string name="default_web_client_id" translatable="false">295957282171-h871mbts5b76220hn82pi9hfgdlkdlqc.apps.googleusercontent.com</string>
</resources>